server: add frame GET by version
