# server/pkg/api/impl.go
@@ -3,20 +3,21 @@ package api
 import (
 	"context"
 	"encoding/json"
+	"fmt"
 	"path/filepath"
 	"os"
 )
 
 type slowmovieCTX struct {
 	frameNum  int
-	frameBin  string
+	framePath string
 	fwVer     string
 	fwPackage string
 }
 
 var CTX = slowmovieCTX{
 	frameNum: 0,
-	frameBin:  "",
+	framePath: filepath.Join(os.TempDir(), "frame.zz"),
 	fwVer:     "",
 	fwPackage: "",
 }
@@ -44,14 +45,13 @@ func (Server) GetStatus(ctx context.Context, request GetStatusRequestObject) (Ge
 }
 
 func (Server) PublishNewFrame(ctx context.Context, request PublishNewFrameRequestObject) (PublishNewFrameResponseObject, error) {
-	framePath := filepath.Join(os.TempDir(), "frame.zz")
-
-	f, err := os.Create(framePath)
+	f, err := os.Create(CTX.framePath)
 	if err != nil {
 		return PublishNewFrame500JSONResponse{}, nil
 	}
 
 	defer f.Close()
+	_, err = f.ReadFrom(request.Body)
 	if err != nil {
 		return PublishNewFrame500JSONResponse{}, nil
 	}
@@ -59,5 +59,33 @@ func (Server) PublishNewFrame(ctx context.Context, request PublishNewFrameReques
 	CTX.frameNum += 1
 	return PublishNewFrame201JSONResponse{
 		Data: map[string]any { "frameNum": CTX.frameNum },
+	}, err
+}
+
+
+func (Server) GetFrameByVersion(ctx context.Context, request GetFrameByVersionRequestObject) (GetFrameByVersionResponseObject, error) {
+	if request.Version != fmt.Sprintf("%d", CTX.frameNum) {
+		return GetFrameByVersion404JSONResponse{
+			Message: fmt.Sprintf("Version %s not found", request.Version),
+		}, nil
+	}
+
+	f, err := os.Open(CTX.framePath)
+	if err != nil {
+		return GetFrameByVersion404JSONResponse{
+			Message: "file not found",
+		}, nil
+	}
+
+	fi, err := f.Stat()
+	if err != nil {
+		return GetFrameByVersion404JSONResponse{
+			Message: "Unable to get file size",
+		}, nil
+	}
+
+	return GetFrameByVersion200ApplicationoctetStreamResponse{
+		ContentLength: fi.Size(),
+		Body: f,
 	}, err
 }
